src/objects/FinServ__ContactContactRelation__c.object
<CustomObject>
    <description>A relationship between any two individuals.</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>RelatedFromContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__InverseRelationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Uniquely identifies the relationship between Contact__c and RelatedContact__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
        <label>InverseRelationship</label>
        <referenceTo>FinServ__ContactContactRelation__c</referenceTo>
        <relationshipLabel>Contact Contact Relations</relationshipLabel>
        <relationshipName>ContactContactRelations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RelatedToContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FinServ__ReciprocalRole__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contact Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FinServ__ReciprocalRole__c</referenceTo>
        <relationshipName>ContactReciprocalRole</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Contact-Contact Relationship</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Contact Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__CCRCanOnlyBeDeactivated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(FinServ__Contact__c),ISCHANGED(FinServ__RelatedContact__c),ISCHANGED(FinServ__Role__c)),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>This record can&apos;t be edited. To update relationship information, you can deactivate this record and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__CannotCreateInactiveRecord</fullName>
        <active>true</active>
        <description>Ensures that a record cannot be created as Inactive</description>
        <errorConditionFormula>AND(ISNEW(),FinServ__Active__c == false)</errorConditionFormula>
        <errorMessage>A Contact-Contact Relationship cannot be created as Inactive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__ContactAndRelatedContactCannotBeSame</fullName>
        <active>true</active>
        <errorConditionFormula>FinServ__Contact__c = FinServ__RelatedContact__c</errorConditionFormula>
        <errorMessage>Contact and Related Contact must be different entities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__InactiveCCRCannotBeEdited</fullName>
        <active>true</active>
        <errorConditionFormula>AND(PRIORVALUE(FinServ__Active__c) == false,NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Inactive record can&apos;t be edited. To update relationship information, you can create a new one.</errorMessage>
    </validationRules>
</CustomObject>